--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -487,4 +487,27 @@ a:hover {
   margin-top: 1.5rem;
 }
 
+.card__labels__1 {
+  height: 8px;
+  width: 4em;
+  background-color: #EC4A9D;
+  border-radius: 5em;
+  margin: 1.5rem;
+}
+
+.card__labels__2 {
+  height: 8px;
+  width: 4em;
+  background-color: #2CC6AB;
+  border-radius: 5em;
+  margin: 1.5rem;
+}
+.card__labels__3 {
+  height: 8px;
+  width: 4em;
+  background-color: #09A9ED;
+  border-radius: 5em;
+  margin: 1.5rem;
+}
+
 /*# sourceMappingURL=index.css.map */
