Added throttle to cardDelete and listDelete actions as these might be causing errors

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -492,7 +492,7 @@ a:hover {
   width: 4em;
   background-color: #EC4A9D;
   border-radius: 5em;
-  margin: 1.5rem;
+  margin: 1.5rem 0;
 }
 
 .card__labels__2 {
@@ -500,14 +500,14 @@ a:hover {
   width: 4em;
   background-color: #2CC6AB;
   border-radius: 5em;
-  margin: 1.5rem;
+  margin: 1.5rem 0;
 }
 .card__labels__3 {
   height: 8px;
   width: 4em;
   background-color: #09A9ED;
   border-radius: 5em;
-  margin: 1.5rem;
+  margin: 1.5rem 0;
 }
 
 /*# sourceMappingURL=index.css.map */
